<resources>
    <string name="app_name">Storyteller</string>

    <string-array name="pronouns">
        <item>she/her/hers</item>
        <item>he/him/his</item>
        <item>they/them/theirs</item>
    </string-array>

    <string name="get_started">Get Started</string>
    <string name="library_title">Library</string>
    <string name="create_book">Create Book</string>
    <string name="name">Name</string>
    <string name="display_name">Display Name</string>
    <string name="Birthday">Birthday: mm-dd-yyyy</string>
    <string name="relationship">Relationship</string>
    <string name="hometown">Hometown</string>
    <string name="current_residence">Current Residence</string>
    <string name="Create">Create</string>
    <string name="choose_category">Choose Category</string>
    <string name="experiences">Experiences</string>
    <string name="preferences">Preferences</string>
    <string name="events_stories">Events &amp; Stories</string>
    <string name="relationships">Relationships</string>
    <string name="values">Values</string>
    <string name="fav_musician">Who was your favorite musician growing up?</string>
    <string name="add_question">Add Question</string>
    <string name="add_photo_optional">Add Photo (optional)</string>
    <string name="add">Add</string>
    <string name="fav_actor">Who was your favorite actor growing up?</string>
    <string name="fav_celebrity">Who was your favorite celebrity growing up?</string>
    <string name="fav_food">What was your favorite food growing up?</string>
    <string name="fav_hobby">What was your favorite hobby growing up?</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="custom_question">Add your own question!</string>
    <string name="add_custom_question">Custom Question</string>
    <string name="exp_growing_up">What was it like where you grew up?</string>
    <string name="exp_funny">Are there any funny stories that come to mind about growing up?</string>
    <string name="exp_last_school">Can you tell me something that happened at the last school you attended?</string>
    <string name="exp_nickname">Did you have a nickname? If so, is there a story about how you got it?</string>
    <string name="exp_memory">What is one vivid memory you have from growing up?</string>
    <string name="events_met_me">Can you tell me the story of when you first saw me?</string>
    <string name="events_pivotal">Can you tell me about a significant turning point in your life?</string>
    <string name="events_memory">What is the first family event you can remember?</string>
    <string name="event_first_job">Can you tell me about your first job?</string>
    <string name="event_immigrant">Can you tell me what you know about when our family first came to this country?</string>
    <string name="relate_meet">How did you meet an important romantic partner in your life?</string>
    <string name="relate_evolve">What do you remember learning from relationships around you growing up?</string>
    <string name="relate_kiss">Can you tell me about when you first fell in love?</string>
    <string name="relate_change">How have your ideas about relationships changed over time?</string>
    <string name="relate_lessons">Can you tell me something you have learned through your relationships?</string>
    <string name="val_remembered">How would you like to be remembered?</string>
    <string name="val_world">What change would you like to see in the world?</string>
    <string name="val_motto"> Do you have a personal motto or words that you live by? </string>
    <string name="val_good_person">What does being a good person mean to you?</string>
    <string name="val_family_importance">What is the importance of family in your life?</string>
    <string name="return_to_book">Return to book</string>
</resources>
