<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestionActivity">

    <Button
        android:id="@+id/add_question_finish"
        android:layout_width="116dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:background="@color/blue1"
        android:onClick="onAddClicked"
        android:text="@string/add"
        android:textColor="@color/white1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/header4"
        android:layout_width="411dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/library_title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_question"
        android:textColor="@color/white1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/header4"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/header4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:text="@string/fav_musician"
        android:textColor="@color/black1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header4" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="183dp"
        android:layout_height="26dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:text="@string/add_photo_optional"
        android:textColor="@color/black1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="232dp"
        android:layout_height="276dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="37dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>