<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ValuesActivity">

    <Button
        android:id="@+id/get-started3"
        android:layout_width="152dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="@color/blue1"
        android:onClick="onReturnToHomeClick"
        android:text="@string/return_to_book"
        android:textColor="@color/white1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_box_6" />

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@color/blue1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/values"
            android:textAlignment="center"
            android:textColor="@color/white1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/action_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:clickable="true"
            android:onClick="onBackClick"
            android:text="@string/back"
            android:textColor="@color/white1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/header2" />

    </RelativeLayout>

    <View
        android:id="@+id/pref_box_1"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:background="@color/gray1"
        android:onClick="onQuestionClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout" />

    <TextView
        android:id="@+id/pref_q_1"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/val_remembered"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_1"
        app:layout_constraintStart_toStartOf="@+id/pref_box_1"
        app:layout_constraintTop_toTopOf="@+id/pref_box_1" />

    <ImageView
        android:id="@+id/plus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_1"
        app:layout_constraintEnd_toEndOf="@+id/pref_box_1"
        app:layout_constraintTop_toTopOf="@+id/pref_box_1"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <View
        android:id="@+id/pref_box_2"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray1"
        android:onClick="onQuestionClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_box_1" />

    <TextView
        android:id="@+id/pref_q_2"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/val_world"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_2"
        app:layout_constraintStart_toStartOf="@+id/pref_box_2"
        app:layout_constraintTop_toTopOf="@+id/pref_box_2" />

    <ImageView
        android:id="@+id/plus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_2"
        app:layout_constraintEnd_toEndOf="@+id/pref_box_2"
        app:layout_constraintTop_toTopOf="@+id/pref_box_2"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <View
        android:id="@+id/pref_box_3"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray1"
        android:onClick="onQuestionClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_box_2" />

    <TextView
        android:id="@+id/pref_q_3"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/val_motto"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_3"
        app:layout_constraintStart_toStartOf="@+id/pref_box_3"
        app:layout_constraintTop_toTopOf="@+id/pref_box_3" />

    <ImageView
        android:id="@+id/plus3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_3"
        app:layout_constraintEnd_toEndOf="@+id/pref_box_3"
        app:layout_constraintTop_toTopOf="@+id/pref_box_3"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <View
        android:id="@+id/pref_box_4"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray1"
        android:onClick="onQuestionClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_box_3" />

    <TextView
        android:id="@+id/pref_q_4"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/val_good_person"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_4"
        app:layout_constraintStart_toStartOf="@+id/pref_box_4"
        app:layout_constraintTop_toTopOf="@+id/pref_box_4" />

    <ImageView
        android:id="@+id/plus4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_4"
        app:layout_constraintEnd_toEndOf="@+id/pref_box_4"
        app:layout_constraintTop_toTopOf="@+id/pref_box_4"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <View
        android:id="@+id/pref_box_5"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray1"
        android:onClick="onQuestionClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_box_4" />

    <View
        android:id="@+id/pref_box_6"
        android:layout_width="367dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray1"
        android:onClick="onQuestionClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pref_box_5" />

    <TextView
        android:id="@+id/pref_q_5"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/val_family_importance"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_5"
        app:layout_constraintStart_toStartOf="@+id/pref_box_5"
        app:layout_constraintTop_toTopOf="@+id/pref_box_5"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/pref_q_6"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/custom_question"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_6"
        app:layout_constraintStart_toStartOf="@+id/pref_box_6"
        app:layout_constraintTop_toTopOf="@+id/pref_box_6" />

    <ImageView
        android:id="@+id/plus5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_5"
        app:layout_constraintEnd_toEndOf="@+id/pref_box_5"
        app:layout_constraintTop_toTopOf="@+id/pref_box_5"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <ImageView
        android:id="@+id/plus6"
        android:layout_width="23dp"
        android:layout_height="22dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/pref_box_6"
        app:layout_constraintEnd_toEndOf="@+id/pref_box_6"
        app:layout_constraintTop_toTopOf="@+id/pref_box_6"
        app:srcCompat="@drawable/ic_add_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>