<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseCategoryActivity">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@color/blue1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createBookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/choose_category"
            android:textAlignment="center"
            android:textColor="@color/white1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/action_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:clickable="true"
            android:onClick="onBackClick"
            android:text="@string/back"
            android:textColor="@color/white1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/header2" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/header_layout">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:id="@+id/ellipse"
                android:layout_width="135dp"
                android:layout_height="133dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:background="@drawable/ellipse"
                android:backgroundTint="@color/blue2"
                android:onClick="goToExperiences" />

            <TextView
                android:id="@+id/experiences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ellipse"
                android:layout_alignBottom="@id/ellipse"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/experiences"
                android:textColor="@color/white1"
                android:textStyle="bold" />

            <View
                android:id="@+id/ellipse3"
                android:layout_width="135dp"
                android:layout_height="133dp"
                android:layout_below="@id/ellipse"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:background="@drawable/ellipse"
                android:backgroundTint="@color/blue2"
                android:onClick="goToEvents"
                app:layout_constraintTop_toBottomOf="@+id/ellipse" />


            <TextView
                android:id="@+id/eventsAndStories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ellipse3"
                android:layout_alignBottom="@id/ellipse3"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/events_stories"
                android:textColor="@color/white1"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:id="@+id/ellipse2"
                android:layout_width="135dp"
                android:layout_height="133dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:background="@drawable/ellipse"
                android:backgroundTint="@color/blue2"
                android:onClick="goToPreferences" />

            <TextView
                android:id="@+id/preferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ellipse2"
                android:layout_alignBottom="@id/ellipse2"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/preferences"
                android:textColor="@color/white1"
                android:textStyle="bold" />

            <View
                android:id="@+id/ellipse4"
                android:layout_width="135dp"
                android:layout_height="133dp"
                android:layout_below="@id/ellipse2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="48dp"
                android:background="@drawable/ellipse"
                android:backgroundTint="@color/blue2"
                android:onClick="goToRelationships"
                app:layout_constraintTop_toBottomOf="@+id/ellipse2" />

            <TextView
                android:id="@+id/relationships"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ellipse4"
                android:layout_alignBottom="@id/ellipse4"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/relationships"
                android:textColor="@color/white1"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/ellipse5"
        android:layout_width="135dp"
        android:layout_height="133dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/ellipse"
        android:backgroundTint="@color/blue2"
        android:onClick="goToValues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_wrapper" />

    <TextView
        android:id="@+id/values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values"
        android:textColor="@color/white1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse5"
        app:layout_constraintEnd_toEndOf="@+id/ellipse5"
        app:layout_constraintStart_toStartOf="@+id/ellipse5"
        app:layout_constraintTop_toTopOf="@+id/ellipse5" />

</androidx.constraintlayout.widget.ConstraintLayout>